	  etc.
	* apps/nshlib:  If waitpid() is supported, then NSH now catches the
	  return value from spawned applications (provided by Mike Smith)
	* apps/nshlib:  Lock the scheduler while starting built-in applications
	  in order to eliminate race conditions (also from Mike Smith).
	* apps/examples/adc, pwm, and qencoder:  Add support for testing
	  devices with multiple ADC, PWM, and QE devices.
	* apps/nshlib/nsh_mntcmds.c:  Separated mount-related commands out of
	  nsh_fscmds.c.  Extended to the mount command so that if no arguments
	  are provided, then the current mountpoints are enumerated.
	* apps/nshlib/nsh_mntcmds.c:  Add an NSH df command to list the
	  properties of mounted file systems.
	* apps/nshlib/nsh_parse.c:  Extend help command options.  'help' with
	  no arguments outputs a short list of commands.  With -v lists all
	  command line details.  A command name can be added to just get
	  help on one command.
	* system/readline.c:  If character input/output is interrupted by a
	  signal, then readline() will try the read/write again.
	* apps/*/Make.defs:  Numerous fixes needed to use the automated
	  configuration (from Richard Cochran).

6.22 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/netutils/thttpd/thttpd_cgi.c:  Missing NULL in argv[]
	  list (contributed by Kate).
	* apps/nshlib/nsh_parse.c: CONFIG_NSH_DISABLE_WGET not CONFIG_NSH_DISABLE_GET
	  in one location (found by Kate).
	* apps/examples/ostest/prioinherit.c:  Limit the number of test
	  threds to no more than 3 of each priority.  Bad things happen
	  when the existing logic tried to created several hundred test
	  treads!
	* apps/nshlib/nsh.h:  Both CONFIG_LIBC_STRERROR and CONFIG_NSH_STRERROR
	  must be defined to use strerror() with NSH.
	* apps/examples/*/*_main.c, system/i2c/i2c_main.c, and others:  Added
	  configuration variable CONFIG_USER_ENTRYPOINT that may be used to change
	  the default entry from user_start to some other symbol.  Contributed by
	  Kate.